--- a/static/base.css
+++ b/static/base.css
@@ -1,29 +1,36 @@
-@import url('http://fonts.googleapis.com/css?family=Oswald');
-@import url('http://fonts.googleapis.com/css?family=Roboto+Slab');
-
+@import url('http://fonts.googleapis.com/css?family=Raleway:400,500');
+@import url('https://fonts.googleapis.com/css?family=Lora:400,400italic');
+/* Blue #0f72b3 */
+/* Red #d85565 */
 html {
-  background-color: #34324b;
+  background-color: #333;
   text-align: center;
+  font-family: 'Lora', serif;
+  padding-bottom: 100px;
 }
 h1{
-  font-family: "Oswald", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 2.2em;
-  color: #cdb44a;
-  font-weight: bold;
+  color: #0f72b3;
+  font-weight: 500;
+  font-style: normal;
 }
 
 h3 {
-  font-family: "Roboto Slab", sans-serif;
-  font-size: 1.2em;
-  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.4em;
+  color: #d85565;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  margin-top: 40px;
+  margin-bottom: 8px;
 }
 input {
   margin-top: 30px;
-  font-size: .9em;
-  font-weight: bold;
-  font-family: "Roboto Slab", serif;
+  font-size: 1em;
+  font-family: "Lora", serif;
   border: transparent;
 }
 input[type=text] {
@@ -42,24 +49,84 @@ input[type=number] {
 }
 input[type=submit] {
   margin-left: 20px;
+  font-family: "Lora", serif;
+  font-style: italic;
   height: 40px;
-  width: 110px;
-  background: #cdb44a;
+  width: 120px;
+  background-color: #d85565;
   color: white;
 }
+input[type=submit]:hover {
+  background-color: #E27E8D;
+}
 a {
-  font-family: "Roboto Slab", sans-serif;
-  font-size: .8em;
+  font-family: "Lora", sans-serif;
   font-weight: bold;
-  color: #FFFFFF;
+  color: #d85565;
   text-decoration: none;
 }
 a:hover{
-  color: #2b997d;
+  color: #ddd;
+}
+p > a {
+  color: #0f72b3;
 }
 ul{
-  list-style-type: square;
+  list-style-type: disc;
   list-style-position: inside;
+  max-width: 600px;
+  margin: 0 auto !important;
+  float: none !important;
+  text-align: left;
+}
+ol{
+  list-style-position: inside;
+  max-width: 600px;
+  margin: 0 auto !important;
+  float: none !important;
+  text-align: left;
+}
+.copula{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  background-color: #ddd;
+  max-width: 700px;
+  margin: 0 auto !important;
+  float: none !important;
+  margin: 20px;
+  padding: 20px;
+  font-weight: bold;
+}
+.col {
+  display:flex;
+  width:350px;
+  color: #333;
+  align-self:center;
+  text-align: center;
+}
+
+footer{
+  font-size: .8em;
+  font-style: italic;
+  position:fixed;
+  bottom:0;
+  left:0;
+  right:0;
+  width: 100%;
+  padding-bottom: 20px;
+  padding-top: 15px;
+  background-color: rgba(51,51,51,0.8);
+}
+.parent {
+  padding-top: 80px;
+}
+.flexcontainer {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: row;
+   flex-direction: row;
 }
 button {
   background: transparent;
@@ -70,7 +137,7 @@ button {
   cursor: pointer;
   font-size: 1.2em;
   font-weight: bold;
-  font-family: "Roboto Slab", serif;
+  font-family: "Lora", serif;
   color: white;
 }
 button:hover {
@@ -86,10 +153,23 @@ hr {
   width: 80%;
 }
 body {
+  font-size: 1em;
+  font-family: "Lora", serif;
+  color: #ddd;
+  margin: 80px;
+}
+p {
+  font-style:normal;
+  max-width: 600px;
+  font-size:.95em;
+  line-height: 16pt;
+  margin: 0 auto !important;
+  float: none !important;
+  text-align: left;
+}
+.emph {
+  font-style: italic;
+  text-align: center;
   font-size: 1.2em;
-  font-family: "Roboto Slab", serif;
-  margin: 8%;
-  margin-left: 18%;
-  margin-right: 18%;
-  color: #ffffff;
+  line-height: 19pt;
 }
