--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,21 +3,39 @@
 	<link rel="stylesheet" href="../static/base.css">
 </head>
 <body>
-<h1>COPULA ABSENCE CALCULATOR</h1>
+<h1>COPULA CALCULATOR</h1>
 
-{% if input %}
-  <h3>Received: </h3>
-  <p>{{ input|safe }}!</p>
-{% else %}
-  <p>Thanks for submitting!!</p>
-{% endif %}
+<section class="copula">
+<div class="flexcontainer">
+	<div class="col">
+	{% if input %}
+	  <h3>COUNT: </h3>
+	  <p>{{ input|safe }}</p>
+	 
 
-{% if sentences %}
-	<p>{{ sentences }}</p>
-{% endif %}
+	{% else %}
+	  <p>Thanks for submitting!!</p>
+	{% endif %}
+	</div>
+
+	<div class="col">
+
+	{% if sentences %}
+		<p>{{ sentences|safe }}</p>
+	{% endif %}
+	</div>
+ </section>
+</div>
+
 
 <form method="GET">
-<input type="submit" value="BACK"></input>
+<input type="submit" value="Back"></input>
 </form>
+
+
+<footer>
+<a href="/">Calculator</a> &emsp; <a href="/about">About</a> &emsp; <a href="https://github.com/kcp288/copula">Github</a>
+</footer>
+
 </body>
 </html>
